px4_ws/logs/rgbd_slam/build.make.002.log.stderr
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp:35:1: error: expected declaration before '}' token
 };
 ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
